# Seneschall

./: .gitignore  LICENSE  Main.hs  README.md  Seneadm.hs  Seneschall.cabal  default.conf
Seneschall/: Config.hs  Database.hs  Pages.hs  Session.hs  Types.hs  User.hs
Seneschall/Pages/: Admin.hs  Article.hs  Purchase.hs  Root.hs  User.hs
