name:                Seneschall
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD2
license-file:        LICENSE
author:              Jürgen Peters
maintainer:          taulmarill@xgn.de
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable Seneschall
  main-is:             Main.hs
  other-modules:
    Seneschall.Config
    Seneschall.Database
    Seneschall.Pages
    Seneschall.Pages.Root
    Seneschall.Pages.User
    Seneschall.Session
    Seneschall.Types
  -- other-extensions:
  build-depends:
    acid-state            == 0.12.*,
    aeson                 == 0.7.*,
    base                  >=4.7 && <4.8,
    blaze-builder         == 0.3.*,
    blaze-html            >=0.7 && <0.8,
    bytestring            == 0.10.*,
    containers            == 0.5.*,
    convertible           == 1.1.*,
    cookie                == 0.4.*,
    mtl                   == 2.1.*,
    persistent            >=1.3 && <1.4,
    persistent-postgresql >=1.3 && <1.4,
    persistent-template   >=1.3 && <1.4,
    random                == 1.0.*,
    safecopy              == 0.8.*,
    scotty                >=0.8 && <0.9,
    scrypt                == 0.5.*,
    text                  == 1.1.*,
    transformers          == 0.3.*,
    wai-middleware-static == 0.6.*

  -- hs-source-dirs:
  default-language:    Haskell2010
